Refactor into modular Maven project